<?xml version="1.0"?>
<!--
  ~ Copyright (c) 2015 - Present. The STARTS Team. All Rights Reserved.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>edu.illinois</groupId>
        <artifactId>starts</artifactId>
        <version>1.5-SNAPSHOT</version>
    </parent>

    <groupId>edu.illinois</groupId>
    <artifactId>starts-core</artifactId>
    <name>starts-core</name>
    <packaging>jar</packaging>
    <url>https://github.com/TestingResearchIllinois/starts</url>

    <dependencies>
        <dependency>
            <groupId>org.ekstazi</groupId>
            <artifactId>org.ekstazi.core</artifactId>
            <version>4.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.9.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>3.9.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>3.9.9</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifestFile>META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>report-id</id>
                            <goals>
                                <goal>report</goal>
                            </goals>
                            <configuration>
                                <dataFile>
                                    ${project.build.directory}/jacoco-merged.exec
                                </dataFile>
                                <excludes>
                                    <exclude>edu/illinois/starts/asm/**</exclude>
                                </excludes>
                                <outputDirectory>
                                    ${project.reporting.outputDirectory}/jacoco-merged
                                </outputDirectory>
                            </configuration>
                        </execution>
                        <execution>
                            <id>merge-id</id>
                            <goals>
                                <goal>merge</goal>
                            </goals>
                            <configuration>
                                <fileSets>
                                    <fileSet>
                                        <directory>
                                            ${project.basedir}/../
                                        </directory>
                                        <includes>
                                            <include>starts-core/target/jacoco.exec</include>
                                            <include>starts-plugin/target/jacoco-it.exec</include>
                                        </includes>
                                    </fileSet>
                                </fileSets>
                                <destFile>
                                    ${project.build.directory}/jacoco-merged.exec
                                </destFile>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
